--- a/Diagrams.html
+++ b/Diagrams.html
@@ -8,9 +8,65 @@
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <title>Diagnostics</title>
+
+    <link rel="stylesheet" href="./style.css" />
+    <title>Diagrams</title>
   </head>
-  <body>
+  <body class="bg-black">
+    <!-- Navbar Here -->
+    <section class="navigation">
+      <div class="nav-container">
+        <div class="brand">
+          <a href="./index.html">
+            <img
+              src="./images/Stealthlogointro.png"
+              class="h-20 object-contain"
+              alt=""
+            />
+          </a>
+        </div>
+        <nav>
+          <div class="nav-mobile">
+            <a id="nav-toggle" href="#!"><span></span></a>
+          </div>
+          <ul class="nav-list">
+            <li>
+              <a href="#!">My Account</a>
+            </li>
+            <li>
+              <a href="./Diagrams.html">Diagrams</a>
+            </li>
+            <li>
+              <a href="#!">Manuals</a>
+              <ul class="nav-dropdown">
+                <li>
+                  <a href="#!">Installer Manual</a>
+                </li>
+                <li>
+                  <a href="#!">User Manuel</a>
+                </li>
+              </ul>
+            </li>
+
+            <li>
+              <a href="#!">Installations</a>
+              <ul class="nav-dropdown">
+                <li>
+                  <a href="#!">New Installations</a>
+                </li>
+                <li>
+                  <a href="#!">Request Installation</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#!">Raise a Ticket</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </section>
+
     <!-- Table Starts Here -->
     <table class="w-9/12 m-auto my-10">
       <thead class="bg-blue-800 h-10 text-white">
@@ -21,7 +77,7 @@
           <th class="px-6">Download</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody class="text-white">
         <tr class="">
           <td class="px-6">The Sliding Mr. Bones (Next Stop, Pottersville)</td>
           <td class="px-6">Malcolm Lockyer</td>
@@ -42,5 +98,6 @@
         </tr>
       </tbody>
     </table>
+    <script src="./index.js"></script>
   </body>
 </html>
