--- a/Login.html
+++ b/Login.html
@@ -9,6 +9,8 @@
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <section class="h-screen  bg-black">
