--- a/LostYourPassword.html
+++ b/LostYourPassword.html
@@ -11,6 +11,77 @@
     />
   </head>
   <body>
+    <!-- Navbar Here -->
+    <section class="navigation">
+      <div class="nav-container">
+        <div class="brand">
+          <a href="./index.html">
+            <img
+              src="./images/Stealthlogointro.png"
+              class="h-20 object-contain"
+              alt=""
+            />
+          </a>
+        </div>
+        <nav>
+          <div class="nav-mobile">
+            <a id="nav-toggle" href="#!"><span></span></a>
+          </div>
+          <ul class="nav-list">
+            <li>
+              <a href="#!">My Account</a>
+            </li>
+            <li>
+              <a href="./Diagrams.html">Diagrams</a>
+            </li>
+            <li>
+              <a href="#!">Manuals</a>
+              <ul class="nav-dropdown">
+                <li>
+                  <a href="./images/installer_manual.pdf">Installer Manual</a>
+                </li>
+                <li>
+                  <a href="./images/user_manual.pdf">User Manuel</a>
+                </li>
+              </ul>
+            </li>
+
+            <li>
+              <a href="#!">Installations</a>
+              <ul class="nav-dropdown">
+                <li>
+                  <a href="#!">New Installations</a>
+                </li>
+                <li>
+                  <a href="#!">Request Installation</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#!">Raise a Ticket</a>
+            </li>
+            <li class="">
+              <a href="#!" class="w-full flex items-center">
+                <img
+                  src="./images/stealth-icon.png"
+                  class="h-10 w-10 p-2 bg-gray-700 rounded-full objet-contain"
+                  alt=""
+                />
+              </a>
+              <ul class="nav-dropdown">
+                <li>
+                  <a href="./Login.html">Login</a>
+                </li>
+                <li>
+                  <a href="./LostYourPassword.html">Forgot Your Password</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </section>
+    <!-- Form Starts here -->
     <section class="h-screen bg-black">
       <div class="px-6 h-full text-gray-800">
         <div
