--- a/Diagrams.html
+++ b/Diagrams.html
@@ -40,10 +40,10 @@
               <a href="#!">Manuals</a>
               <ul class="nav-dropdown">
                 <li>
-                  <a href="#!">Installer Manual</a>
+                  <a href="./images/installer_manual.pdf">Installer Manual</a>
                 </li>
                 <li>
-                  <a href="#!">User Manuel</a>
+                  <a href="./images/user_manual.pdf">User Manuel</a>
                 </li>
               </ul>
             </li>
@@ -61,6 +61,23 @@
             </li>
             <li>
               <a href="#!">Raise a Ticket</a>
+            </li>
+            <li class="">
+              <a href="#!" class="w-full flex items-center">
+                <img
+                  src="./images/stealth-icon.png"
+                  class="h-10 w-10 p-2 bg-gray-700 rounded-full objet-contain"
+                  alt=""
+                />
+              </a>
+              <ul class="nav-dropdown">
+                <li>
+                  <a href="./Login.html">Login</a>
+                </li>
+                <li>
+                  <a href="./LostYourPassword.html">Forgot Your Password</a>
+                </li>
+              </ul>
             </li>
           </ul>
         </nav>
