--- a/Diagrams.html
+++ b/Diagrams.html
@@ -40,10 +40,14 @@
               <a href="#!">Manuals</a>
               <ul class="nav-dropdown">
                 <li>
-                  <a href="./images/installer_manual.pdf">Installer Manual</a>
+                  <a href="./images/installer_manual.html" target="_blank"
+                    >Installer Manual</a
+                  >
                 </li>
                 <li>
-                  <a href="./images/user_manual.pdf">User Manuel</a>
+                  <a href="./images/user_manual.html" target="_blank"
+                    >User Manuel</a
+                  >
                 </li>
               </ul>
             </li>
