Hover effect removed

--- a/index.html
+++ b/index.html
@@ -40,10 +40,14 @@
               <a href="#!">Manuals</a>
               <ul class="nav-dropdown">
                 <li>
-                  <a href="./images/installer_manual.html" target="_blank">Installer Manual</a>
+                  <a href="./images/installer_manual.html" target="_blank"
+                    >Installer Manual</a
+                  >
                 </li>
                 <li>
-                  <a href="./images/user_manual.html" target="_blank">User Manuel</a>
+                  <a href="./images/user_manual.html" target="_blank"
+                    >User Manuel</a
+                  >
                 </li>
               </ul>
             </li>
@@ -87,7 +91,7 @@
     <!-- Card for the details -->
     <div>
       <div
-        class="block mt-10 p-6 w-1/2 m-auto bg-blue-200 rounded-lg border border-gray-200 shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
+        class="block mt-10 p-6 w-1/2 m-auto bg-blue-200 rounded-lg border border-gray-200 shadow-md dark:border-gray-700"
       >
         <div class="pt-2 flex justify-between items-center">
           <h5
