--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
               <a href="#!">Manuals</a>
               <ul class="nav-dropdown">
                 <li>
-                  <a href="./images/installer_manual.html" target="_blank"
+                  <a href="./images/installer_manual.pdf" target="_blank"
                     >Installer Manual</a
                   >
                 </li>
                 <li>
-                  <a href="./images/user_manual.html" target="_blank"
+                  <a href="./images/user_manual.pdf" target="_blank"
                     >User Manuel</a
                   >
                 </li>
@@ -56,10 +56,10 @@
               <a href="#!">Installations</a>
               <ul class="nav-dropdown">
                 <li>
-                  <a href="#!">New Installations</a>
+                  <a href="./newinstallation.html">New Installations</a>
                 </li>
                 <li>
-                  <a href="#!">Request Installation</a>
+                  <a href="./requestinstallation.html">Request Installation</a>
                 </li>
               </ul>
             </li>
@@ -80,6 +80,9 @@
                 </li>
                 <li>
                   <a href="./LostYourPassword.html">Forgot Your Password</a>
+                </li>
+                <li>
+                  <a href="./signup.html">Sign Up</a>
                 </li>
               </ul>
             </li>
