--- a/requestinstallation.html
+++ b/requestinstallation.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lost Password</title>
+    <title>Log in</title>
     <link
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Navbar Here -->
@@ -90,39 +90,53 @@
         </nav>
       </div>
     </section>
+
     <!-- Form Starts here -->
-    <section class="h-screen bg-black">
+    <section class="h-screen bg-black py-10">
       <div class="px-6 h-full text-gray-800">
-        <div
-          class="flex xl:justify-center lg:justify-between justify-center items-center flex-wrap h-full g-6"
-        >
-          <div
-            class="grow-0 shrink-1 justify-center flex md:shrink-0 basis-auto xl:w-6/12 lg:w-6/12 md:w-9/12 mb-12 md:mb-0"
-          >
-            <img
-              src="./images/Stealthlogointro.png"
-              class="w-1/2"
-              alt="Sample image"
-            />
-          </div>
+        <div class="flex xl:justify-center items-center flex-wrap h-full g-6">
           <div class="xl:ml-20 xl:w-5/12 lg:w-5/12 md:w-8/12 mb-12 md:mb-0">
             <form>
               <!-- Email input -->
               <div class="mb-6">
                 <input
-                  type="text"
+                  type="number"
                   class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
                   id="exampleFormControlInput2"
-                  placeholder="Email address"
+                  placeholder="Vin Number"
                 />
               </div>
 
+              <div class="mb-6">
+                <input
+                  type="text"
+                  class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                  id="exampleFormControlInput2"
+                  placeholder="Make"
+                />
+              </div>
+              <div class="mb-6">
+                <input
+                  type="text"
+                  class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                  id="exampleFormControlInput2"
+                  placeholder="Model"
+                />
+              </div>
+              <div class="mb-6">
+                <textarea
+                  type="text"
+                  class="form-control block w-full h-40 px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                  id="exampleFormControlInput2"
+                  placeholder="Reason for Requesting Installation"
+                ></textarea>
+              </div>
               <div class="text-center lg:text-left">
                 <button
                   type="button"
                   class="inline-block px-12 py-3 bg-blue-600 text-white font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
                 >
-                  Request Password Reset
+                  Send
                 </button>
               </div>
             </form>
