--- a/signup.html
+++ b/signup.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lost Password</title>
+    <title>Log in</title>
     <link
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Navbar Here -->
@@ -90,7 +90,8 @@
         </nav>
       </div>
     </section>
-    <!-- Form Starts here -->
+
+    <!-- Login Form Starts here -->
     <section class="h-screen bg-black">
       <div class="px-6 h-full text-gray-800">
         <div
@@ -117,13 +118,41 @@
                 />
               </div>
 
+              <!-- Password input -->
+              <div class="mb-6">
+                <input
+                  type="password"
+                  class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                  id="exampleFormControlInput2"
+                  placeholder="Password"
+                />
+              </div>
+              <div class="mb-6">
+                <input
+                  type="password"
+                  class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                  id="exampleFormControlInput2"
+                  placeholder="Confirm Password"
+                />
+              </div>
+
               <div class="text-center lg:text-left">
                 <button
                   type="button"
                   class="inline-block px-12 py-3 bg-blue-600 text-white font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
                 >
-                  Request Password Reset
+                  Sign Up
                 </button>
+                <p
+                  class="text-sm font-semibold mt-2 pt-1 mb-0 text-white hover:text-gray-100 focus:text-gray-100"
+                >
+                  Already have an account?
+                  <a
+                    href="#!"
+                    class="text-white hover:text-gray-100 focus:text-gray-100 transition duration-200 ease-in-out"
+                    >Login</a
+                  >
+                </p>
               </div>
             </form>
           </div>
