--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </a>
               <ul class="nav-dropdown">
                 <li>
-                  <a href="./Login.html">Login</a>
+                  <a href="./Login.html">Logout</a>
                 </li>
                 <li>
                   <a href="./LostYourPassword.html">Forgot Your Password</a>
@@ -94,7 +94,7 @@
     <!-- Card for the details -->
     <div>
       <div
-        class="block mt-10 p-6 w-1/2 m-auto bg-blue-200 rounded-lg border border-gray-200 shadow-md dark:border-gray-700"
+        class="block mt-10 p-6 lg:w-1/2 m-auto bg-blue-200 rounded-lg border border-gray-200 shadow-md dark:border-gray-700"
       >
         <div class="pt-2 flex justify-between items-center">
           <h5
