--- a/Login.html
+++ b/Login.html
@@ -73,7 +73,7 @@
                 </a>
                 <ul class="nav-dropdown">
                   <li>
-                    <a href="./Login.html">Login</a>
+                    <a href="./Login.html">Logout</a>
                   </li>
                   <li>
                     <a href="./LostYourPassword.html">Forgot Your Password</a>
