--- a/signup.html
+++ b/signup.html
@@ -76,7 +76,7 @@
               </a>
               <ul class="nav-dropdown">
                 <li>
-                  <a href="./Login.html">Login</a>
+                  <a href="./Login.html">Logout</a>
                 </li>
                 <li>
                   <a href="./LostYourPassword.html">Forgot Your Password</a>
@@ -150,7 +150,7 @@
                   <a
                     href="#!"
                     class="text-white hover:text-gray-100 focus:text-gray-100 transition duration-200 ease-in-out"
-                    >Login</a
+                    >Logout</a
                   >
                 </p>
               </div>
