IFrame Tag Added

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
               <a href="#!">Manuals</a>
               <ul class="nav-dropdown">
                 <li>
-                  <a href="./images/installer_manual.pdf" target="_blank"
+                  <a href="./installermanuel.html" target="_blank"
                     >Installer Manual</a
                   >
                 </li>
                 <li>
-                  <a href="./images/user_manual.pdf" target="_blank"
+                  <a href="./usermanuel.html" target="_blank"
                     >User Manuel</a
                   >
                 </li>
