--- a/installermanuel.html
+++ b/installermanuel.html
@@ -13,7 +13,8 @@
   <body class="h-[100vh]">
     <!-- Installer Manuel Here -->
     <div class="h-fit">
- 
+      <iframe src="./images/installer_manual.pdf" width="100%" height="700px">
+      </iframe>
     </div>
   </body>
 </html>
