Search bar redesigned

--- a/Diagrams.html
+++ b/Diagrams.html
@@ -92,9 +92,9 @@
     </section>
 
     <!-- Search Bar Starts Here -->
-    <form class="flex items-center mt-4">
+    <form class="flex items-center justify-end mt-4 w-9/12 m-auto">
       <label for="simple-search" class="sr-only">Search</label>
-      <div class="relative w-full">
+      <div class="relative w-full flex justify-end">
         <div
           class="flex absolute inset-y-0 inset-x-20 items-center pl-3 pointer-events-none"
         ></div>
@@ -102,7 +102,7 @@
           onkeyup="SearchFunctionality()"
           type="text"
           id="myInput"
-          class="bg-gray-50 border border-gray-300 text-black text-sm w-1/2 m-auto rounded-lg focus:ring-blue-500 focus:border-blue-500 block pl-6 text-lg py-3 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+          class="bg-gray-50 border border-gray-300 flex text-black text-sm w-1/4 rounded-lg focus:ring-blue-500 focus:border-blue-500 block pl-4 text-lg py-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
           placeholder="Search ..."
           required
         />
