--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
                   >
                 </li>
                 <li>
-                  <a href="./usermanuel.html" target="_blank"
-                    >User Manuel</a
-                  >
+                  <a href="./usermanuel.html" target="_blank">User Manuel</a>
                 </li>
               </ul>
             </li>
