--- a/usermanuel.html
+++ b/usermanuel.html
@@ -8,13 +8,101 @@
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <title>Document</title>
+
+    <link rel="stylesheet" href="./style.css" />
+    <title>Installer Manuel</title>
   </head>
   <body class="h-[100vh]">
-    <!-- User Manuel Here -->
+    <!-- Navbar Here -->
+    <section class="navigation">
+      <div class="nav-container">
+        <div class="brand">
+          <a href="./index.html">
+            <img
+              src="./images/Stealthlogointro.png"
+              class="h-20 object-contain"
+              alt=""
+            />
+          </a>
+        </div>
+        <nav>
+          <div class="nav-mobile">
+            <a id="nav-toggle" href="#!"><span></span></a>
+          </div>
+          <ul class="nav-list">
+            <li>
+              <a href="#!">My Account</a>
+            </li>
+            <li>
+              <a href="./Diagrams.html">Diagrams</a>
+            </li>
+            <li>
+              <a href="#!">Manuals</a>
+              <ul class="nav-dropdown">
+                <li>
+                  <a href="./installermanuel.html" target="_blank"
+                    >Installer Manual</a
+                  >
+                </li>
+                <li>
+                  <a href="./usermanuel.html" target="_blank">User Manuel</a>
+                </li>
+              </ul>
+            </li>
+
+            <li>
+              <a href="#!">Installations</a>
+              <ul class="nav-dropdown">
+                <li>
+                  <a href="./newinstallation.html">New Installations</a>
+                </li>
+                <li>
+                  <a href="./requestinstallation.html">Request Installation</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#!">Raise a Ticket</a>
+            </li>
+            <li class="">
+              <a href="#!" class="w-full flex items-center">
+                <img
+                  src="./images/stealth-icon.png"
+                  class="h-10 w-10 p-2 bg-gray-700 rounded-full objet-contain"
+                  alt=""
+                />
+              </a>
+              <ul class="nav-dropdown">
+                <li>
+                  <a href="./Login.html">Logout</a>
+                </li>
+                <li>
+                  <a href="./LostYourPassword.html">Forgot Your Password</a>
+                </li>
+                <li>
+                  <a href="./signup.html">Sign Up</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </section>
+    <!-- Installer Manuel Here -->
     <div class="h-fit">
-      <iframe src="./images/user_manual.pdf" width="100%" height="700px">
-      </iframe>
+      <embed
+        src="./images/user_manual.pdf#toolbar=0"
+        type="application/pdf"
+        height="900px"
+        width="100%"
+      />
     </div>
   </body>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
+  <script src="./index.js"></script>
 </html>
